src/test/ui/if/ifmt-unknown-trait.stderr
error: unknown format trait `notimplemented`
  --> $DIR/ifmt-unknown-trait.rs:12:34
   |
LL |     format!("{:notimplemented}", "3");
   |                                  ^^^

error: aborting due to previous error

